--- a/report/example.tex
+++ b/report/example.tex
@@ -606,6 +606,8 @@ TODO list of deficiencies
 
 Flash exporting currently works only for AnimatedArray.
 
+When exporting using screenshots, screenshots taken from previous animation are not deleted.
+
 Defining the window of the built animation does not work for AnimatedBinaryTree.
 
 \chapter{User manual}
