maintenance done for binarytree

--- a/report/example.tex
+++ b/report/example.tex
@@ -602,7 +602,10 @@ AnimatedLinkedList works as intended with a few deficiencies:
 TODO list of deficiences
 
 AnimatedBinaryTree works as intended with a few deficiencies:
-TODO list of deficiencies
+\begin{itemize}
+	\item The functionality to remove an element of the binary tree is unsupported. As a result the user may not remove elements from the binary tree.
+	\item Adding elements to the binary tree which will cause it to require changing the y-spacing of elements in the graphical display, will cause errors to occur with the display. ie. the elements will displayed in the wrong positions, and lines linking nodes together will start appearing when they shouldn't.
+\end{itemize}
 
 Flash exporting currently works only for AnimatedArray.
 
